from populated to resources

--- a/src/main/resources/blog/2021-08-14_cities.md
+++ b/src/main/resources/blog/2021-08-14_cities.md
@@ -39,9 +39,9 @@ You can see your city details.
  * Go to the "leonard" "city" "Capital".
  * You should be at the "entity" screen.
  * You should be at the screen of a "city".
- * The _name_ should be "Capital".
- * The _type_ should be "city".
- * The _owner_ should be "leonard".
+ * The _name_ content should be "Capital".
+ * The _type_ content should be "city".
+ * The _owner_ content should be "leonard".
 
 And players can change the name of cities.
 
@@ -49,7 +49,7 @@ And players can change the name of cities.
  * Click the change name button.
  <!-- SNAPSHOT status=200 -->
  * You should be at the screen of a "city".
- * The _name_ should be "Leoland".
+ * The _name_ content should be "Leoland".
 
 ### Others cities
 
@@ -60,9 +60,9 @@ You can see others cities.
  * Go to the "penny" "city" "Capital".
  * You should be at the "entity" screen.
  * You should be at the screen of a "city".
- * The _name_ should be "Capital".
- * The _type_ should be "city".
- * The _owner_ should be "penny".
+ * The _name_ content should be "Capital".
+ * The _type_ content should be "city".
+ * The _owner_ content should be "penny".
 
 But you cannot change the others cities name.
 
