--- a/src/main/resources/blog/2021-08-16_ships.md
+++ b/src/main/resources/blog/2021-08-16_ships.md
@@ -7,220 +7,104 @@ coder: drpicox
 Imagine a city in front of the sea,
 with a nice ship docked.
 
-Will you board?
-
-### UI Design
-
-```                                                                                
-     View Entity City                                                View Entity Ship
-   +---------------------------------------------------+  ship   +--------------------------------+
-   | ©               …topbar… ( End Turn ) ( Refresh ) | ------> | ©               …top       …top|
-   +---------------------------------------------------+         +--------------------------------+
-   | < | Player leo...ard                              |         | < | Player leo...ardr leo...ard|
-   +---------------------------------------------------+         +--------------------------------+
-   |  City Capital                                     |         |  Ship Beagle of leonard        |
-   |  Population:  #10                                 |         |                                |
-   |                                                   |         |  New ship name: [             ]|
-   |  Ships:                                           |         | ( change ship name )           |
-   |  - Beagle (leonard)                               |         |                                |
-   :                                                   :         |                                |
-   +---------------------------------------------------+         | Pop.: 0                        |
-                                                                 | Load/Unload: [      0 ] (l/u)  |    
-                                                                 :                                :
-                                                                 +--------------------------------+                                                                                                                                                             
-```                                                                 
+Will you board? 
 
 ## Your ships      
 
-### Let's see the ships
+### One ship
 
-You can see your ships on the city. 
+All players start with one ship:
 
- * Given there is "leonard" playing their game "together".
+ * Go to the next player "leonard"
+ <!-- SNAPSHOT status=200 -->
+ * "leonard" should have 1 "ship".
+ * "leonard" should have the "Beagle" "ship"
+ * Go to the "leonard" "ship" "Beagle".
+ * You should be at the "entity" screen.
+ * You should be at the screen of a "ship".
+ * The _name_ content should be "Beagle".
+ * The _type_ content should be "ship".
+ * The _owner_ content should be "leonard".
+
+And you can see that the ship is docked the city:
+
+ * It should be docked at the "leonard" "city" "Capital".
+ * Go to see the dock.
+ * You should be at the screen of a "city".
+ * The _name_ content should be "Capital".
+ * The _type_ content should be "city".
+ * The _owner_ content should be "leonard".
+
+And ships are also visible from the city:
+
+ * There should be 1 docked "leonard" "ship".
+ * There should be docked the "leonard" "Beagle" "ship".
+ * Go to see the docked "leonard" "ship" "Beagle".
+ * You should be at the screen of a "ship".
+ * The _name_ content should be "Beagle".
+ * The _type_ content should be "ship".
+ * The _owner_ content should be "leonard".
+
+### Changing Name
+
+And, like cities, you can change the name of the ships.
+
+ * Change the name to "Cerritos"
  <!-- SNAPSHOT status=200 -->  
- * Click on the "leonard" city "Capital"
- * You should be at the screen of a city.
- * There should be 1 "leonard" ship.
- * There should be the "leonard" "Beagle" ship.
+ * You should be at the screen of a "ship".
+ * The _name_ content should be "Cerritos".
 
-### Details of the ship
+### Loading ships
 
-You can see the details of a ship.
+You can transfer people from the city to the ship, and vice-versa:
 
- * Click on the "leonard" ship "Beagle".
- * You should be at the screen of a ship.
- * The name should be "Beagle".
- * The owner should be "leonard".
- * The population should be 0.
-
-### Changing the name
-
-You can change the name of your ship.
-
- * Enter new name "Cerritos".
- * Click the change name button.
- <!-- SNAPSHOT status=200 -->
-
-And now you can see the new name.
-
- * You should be at the screen of a ship.
- * The name should be "Cerritos".
- * Go back to the previous screen.
- * There should be the "leonard" "Cerritos" ship.
-
-### All players have ships
-
-Penny can see that she also have ships, at least, one.
-
- * Given there is the next player "penny".
- <!-- SNAPSHOT status=200 -->
- * Click on the "penny" city "Capital"
- * There should be 1 "penny" ship.
- * There should be the "penny" "Beagle" ship.
- * There should be 0 "leonard" ship.
-
-## Loading and unloading
-
-### Looking population
-
-In the beginning there was no population on the ship.
-
- * Given there is "leonard" playing their game "together".
+ * You should be at the screen of a "ship".
+ * The resource _population_ count should be 0.
+ * The dock resource _population_ count should be 10.
+ * Enter number 2 as _load unload amount_.
+ * Load the resource "population".
  <!-- SNAPSHOT status=200 -->  
- * Click on the "leonard" city "Capital"
- * The population should be 10.
- * Click on the "leonard" ship "Beagle".
- * The population should be 0.
+ * You should be at the screen of a "ship".
+ * The resource _population_ count should be 2.
+ * The dock resource _population_ count should be 8.
 
-### Loading
+But there is a maximum load.
 
-You can ask to load people on the ship.
+ * The resource _population_ maximum should be 5.
+ * Enter number 999 as _load unload amount_.
+ * Load the resource "population".
+ <!-- SNAPSHOT status=200 -->  
+ * The resource _population_ count should be 5.
+ * The dock resource _population_ count should be 5.
 
- * The load unload amount should be 0.
- * The load requested should be inactive.
- * The unload requested should be inactive.
- * Enter load unload amount as 5.
- * Click the load button.
- <!-- SNAPSHOT status=200 -->
+### Unloading ships
 
-But it is not loaded, yet, not until the end of the round.
+You can also unload ships.
 
- * The population should be 0.
- * The load unload amount should be 5.
- * The load requested should be active.
- * The unload requested should be inactive.
+ * Enter number 2 as _load unload amount_.
+ * Unload the resource "population".
+ <!-- SNAPSHOT status=200 -->  
+ * You should be at the screen of a "ship".
+ * The resource _population_ count should be 3.
+ * The dock resource _population_ count should be 7.
 
-And the order persist, even if we refresh.
+But you cannot unload pas the limit of the dock. 
+So if we wait to achieve the maximum:
 
- * Refresh the game.
- <!-- SNAPSHOT status=200 -->
- * You should be at the screen of a ship.
- * The name should be "Beagle".
- * The population should be 0.
- * The load unload amount should be 5.
- * The load requested should be active.
- * The unload requested should be inactive.
+ * Skip 15 rounds.
+ <!-- SNAPSHOT status=200 -->  
+ * Game round should be 16.
+ * You should be at the screen of a "ship".
+ * The resource _population_ count should be 3.
+ * The dock resource _population_ count should be 20.
+ * The dock resource _population_ maximum should be 20.
 
-### The next round
+We will see that we cannot unload population:
 
-Running the next round will do the load/unload.
+ * Enter number 999 as _load unload amount_.
+ * Unload the resource "population".
+ <!-- SNAPSHOT status=200 -->  
+ * The resource _population_ count should be 3.
+ * The dock resource _population_ count should be 20.
 
- * End the round.
- <!-- SNAPSHOT status=200 -->
- * You should be at the game screen.
- * Click on the "leonard" city "Capital"
- * The population should be 6.
- * Click on the "leonard" ship "Beagle".
- * The population should be 5.
- * The load unload amount should be 0.
- * The load requested should be inactive.
- * The unload requested should be inactive.
-
-### Unload
-
-And unload likewise.
-
- * The population should be 5.
- * Enter load unload amount as 4.
- * Click the unload button.
- <!-- SNAPSHOT status=200 -->
- * The load unload amount should be 4.
- * The unload requested should be active.
- * The load requested should be inactive.
- * End the round.
- <!-- SNAPSHOT status=200 -->
- 
-And see the unload:
-
- * You should be at the game screen.
- * Click on the "leonard" city "Capital"
- * The population should be 11.
- * Click on the "leonard" ship "Beagle".
- * The population should be 1.
- * The load unload amount should be 0.
- * The load requested should be inactive.
- * The unload requested should be inactive.
-
-### Exceeding city load
-
-You cannot load more people than population on the city.
-
- * Enter load unload amount as 9999.
- * Click the load button.
- <!-- SNAPSHOT status=200 -->
- * End the round.
- <!-- SNAPSHOT status=200 -->
-
-But you can only load at most the population that you had on the city.
-
- * You should be at the game screen.
- * Click on the "leonard" city "Capital"
- * The population should be 1.
- * Click on the "leonard" ship "Beagle".
- * The population should be 12.
-
-### Exceeding ship capacity
-
-Skip few turns to wait for population.
-
- * Skip 8 rounds.
- <!-- SNAPSHOT status=200 -->
- * You should be at the game screen.
- * Click on the "leonard" city "Capital"
- * The population should be 9.
- * Click on the "leonard" ship "Beagle".
- * The population should be 12.
-
-And load as many people as you can:
-
- * Enter load unload amount as 9999.
- * Click the load button.
- <!-- SNAPSHOT status=200 -->
- * End the round.
- <!-- SNAPSHOT status=200 -->
- * You should be at the game screen.
- * Click on the "leonard" city "Capital"
- * The population should be 2.
- * Click on the "leonard" ship "Beagle".
- * The population should be 20.
- 
-You cannot load more than 20 people into the ship.
-
-### Exceeding unload capacity
-
-But...
-
- * Enter load unload amount as 9999.
- * Click the unload button.
- <!-- SNAPSHOT status=200 -->
- * End the round.
- <!-- SNAPSHOT status=200 -->
- * You should be at the game screen.
- * Click on the "leonard" city "Capital"
- * The population should be 20.
- * Click on the "leonard" ship "Beagle".
- * The population should be 0.
- 
-You loose the population if they do not fit on the city. Sorry.
- 
- 
+Nothing happened.
