--- a/src/main/resources/blog/2021-08-18_sailing.md
+++ b/src/main/resources/blog/2021-08-18_sailing.md
@@ -4,258 +4,101 @@ coder: drpicox
 ---
 # Sailing
 
-All I want, is a tall ship, and a star to seer her by.
-And that means that we will sail with our ships.
+Everything is at some place, and you can go from
+one city to another city sailing with ships.
 
 From city to city, through the sea.
 
-### UI Design
+## Sailing and locations
 
-``` 
-   Entity View                            Game View:
- ┌──────────────────────────┐         ┌──────────────────────────┐
- │ ...topbar...             │         │ ...topbar...             │
- ├──────────────────────────┤         ├──────────────────────────┤
- │ ...game...               │         │ ...game...               │
- ├──────────────────────────┤         ├──────────────────────────┤
- │ Ship Beagle              │         │                          │
- │ Location: ...            │         │ My cities:               │
- │ It is (docked).          │         │ ┌─────────┐              │
- │                          │         │ │ Capital │              │
- │ New name: [ .... ]       │         │ └─────────┘              │
- │ ( Change name )          │         │                          │
- │                          │         │ My ships:                │
- │ Population: #0           │         │                          │
- │ Load/Unload: [ .. ] (l/u)│         │ ┌────┐  ┌───┐   ┌────┐   │
- │                          │         │ │Bea.│  │S2 │   │S3..│   │
- │ Dest: [ ... ] (s)(h)     │         │ └────┘  └───┘   └────┘   │
- └──────────────────────────┘         │                          │
-                                      │ Cities of penny:         │
-    s: sail                           │ ┌───────────────┐        │
-    h: halt                           │ │ Pennyland     │        │
-                                      │ └───────────────┘        │
-                                      │                          │
-                                      └──────────────────────────┘                                                                                            
-```                                                                 
+### Cities locations
 
-## Sailing to another city
+Cities are created at locations, 0, 5, 10, ... as players join.
+One separated by 5 to the next one.
 
-Sailing takes time, you cannot go from one place to another
-in just one round. 
-
-### From a sail
-
-Start a game with leonard, and look at the ship.
-
- * Given there is "leonard" playing their game "together".
- <!-- SNAPSHOT status=200 -->  
- * You should be at the game screen.
- * Click on the "leonard" owned ship "Beagle".
- * You should be at the screen of a ship.
- * The location should be 0.
- * The destination sail should be inactive.
-
-And set a destination:
-
- * Enter destination location as 5.
- * Click the destination sail button.
- <!-- SNAPSHOT status=200 -->  
+ * Given that "leonard" is playing.
+ * And that "penny" is playing.
+ * Go to the next player "sheldon"
+ <!-- SNAPSHOT status=200 -->
+ * Go to the "leonard" "city" "Capital".
+ * The _location_ number should be 0.
+ * Go back to the previous screen.
+ * Go to the "penny" "city" "Capital".
+ * The _location_ number should be 5.
+ * Go back to the previous screen.
+ * Go to the "sheldon" "city" "Capital".
+ * The _location_ number should be 10.
  
-If you refresh, you will see it active.
+And of course, their ship locations are the same than the cities.
 
- * Refresh the game.
- <!-- SNAPSHOT status=200 -->
- * You should be at the screen of a ship.
- * The name should be "Beagle".
- * The location should be 0.
- * It should be docked at the "leonard" city "Capital".
- * The destination location should be 5.
- * The destination sail should be active.
-
-### See the dock
-
-You can see the dock directly from here.
-
- * Click on see the dock.
- * You should be at the screen of a city.
- * The name should be "Capital".
- * There should be 1 "leonard" ship.
- * Go back to the previous screen.
- * You should be at the screen of a ship.
- * The name should be "Beagle".
-
-### Moving
-
-It takes one round to move one position.
-
- * End the round.
- <!-- SNAPSHOT status=200 -->
- * Click on the "leonard" owned ship "Beagle".
- * The location should be 1.
- * The destination location should be 5.
- * The destination sail should be active.
-
-One turn, one step.
-
- * End the round.
- <!-- SNAPSHOT status=200 -->
- * Click on the "leonard" owned ship "Beagle".
- * The location should be 2.
- * The destination location should be 5.
- * The destination sail should be active.
+ * Go to see the docked "sheldon" "ship" "Beagle".
+ * The _location_ number should be 10.
  
-Another turn, another step...
+### Sailing
 
- * Skip 2 rounds.
- <!-- SNAPSHOT status=200 -->
- * Click on the "leonard" owned ship "Beagle".
- * The location should be 4.
+Sailing takes time, you cannot go from one 
+place through several rounds. 
 
-### And there is no dock
-
-On the sea there is no port.
-
- * It should be not docked.
-
-### Arriving port
-
-You are not still have not arrived at penny city:
-
- * Given there is the next player "penny".
- <!-- SNAPSHOT status=200 -->
- * Click on the "penny" city "Capital"
- * There should be 0 "leonard" ship.
-
-But when arrives, penny can see the ship.
-
- * End the round.
- <!-- SNAPSHOT status=200 -->
- * Click on the "penny" city "Capital"
- * There should be 1 "leonard" ship.
-
-### And seen strange ports
-
-You can see the visiting city from the ship.
-
- * Go to Next player.
- <!-- SNAPSHOT status=200 -->
- * "leonard" should be the current player.
- * Click on the "leonard" owned ship "Beagle".
- * It should be docked at the "penny" city "Capital".
- * Click on see the dock.
- * You should be at the screen of a city.
- * The name should be "Capital".
- * There should be 1 "leonard" ship.
- * There should be 1 "penny" ship.
- * Go back to the previous screen.
- * You should be at the screen of a ship.
-
-### Back voyage
-
-Ships can move in any direction, so go back.
-
- * The location should be 5.
- * The destination sail should be inactive.
-
-Order sail to home.
-
- * Enter destination location as 0.
- * Click the destination sail button.
+ * The _destination sail_ state should be _inactive_.
+ * Enter number 5 as _destination location_.
+ * Set sail.
  <!-- SNAPSHOT status=200 -->  
 
-And see how it moves back to home.
+The ship does not move immediately:
+
+ * The _location_ number should be 10.
+ * The _destination sail_ state should be _active_.
+ * The _destination location_ number should be 5.
+
+But round after round:
 
  * End the round.
  <!-- SNAPSHOT status=200 -->
- * Click on the "leonard" owned ship "Beagle".
- * The location should be 4.
- * The destination sail should be active.
+ * Go to the "sheldon" "ship" "Beagle".
+ * The _location_ number should be 9.
+ * The _destination sail_ state should be _active_.
+ * The _destination location_ number should be 5.
 
-### Stopping the ship
+Until it arrives.
 
-You can ask a ship to stop moving.
-
- * Click the destination halt button.
- <!-- SNAPSHOT status=200 -->
- * The location should be 4.
- * The destination sail should be inactive.
- 
-And it stops moving.
-
- * End the round.
- <!-- SNAPSHOT status=200 -->
- * Click on the "leonard" owned ship "Beagle".
- * The location should be 4.
- * The destination sail should be inactive.
-
-### Changing the idea
-
-Lets imagine that we have new priorities, 
-and we want change the destination.
-For example, we wanted leonard to investigate a far away land.
-
- * Enter destination location as 100.
- * Click the destination sail button.
+ * Skip 4 rounds.
  <!-- SNAPSHOT status=200 -->  
+ * The _location_ number should be 5.
+ * The _destination sail_ state should be _inactive_.
 
-And we started our voyage...
+And you can see that it docked at penny city:
 
- * Skip 10 rounds.
- <!-- SNAPSHOT status=200 -->
- * Click on the "leonard" owned ship "Beagle".
- * The location should be 14.
- * The destination location should be 100.
- * The destination sail should be active.
+ * It should be docked at the "penny" "city" "Capital".
 
-And now, we want to return home:
+### Halting the voyage
 
- * Enter destination location as 0.
- * Click the destination sail button.
+It is possible to cancel the voyage or halt the ship, before start:
+
+ * The _destination sail_ state should be _inactive_.
+ * Enter number 0 as _destination location_.
+ * Set sail.
  <!-- SNAPSHOT status=200 -->  
+ * The _destination sail_ state should be _active_.
+ * The _destination location_ number should be 0.
+ * Halt sailing.
+ <!-- SNAPSHOT status=200 -->  
+ * The _destination sail_ state should be _inactive_.
 
-Let's return:
+But it is also possible to halt the ship during the trip in the middle 
+of nowhere.
 
+ * The _destination sail_ state should be _inactive_.
+ * Enter number 0 as _destination location_.
+ * Set sail.
+ <!-- SNAPSHOT status=200 -->  
  * End the round.
- <!-- SNAPSHOT status=200 -->
- * Click on the "leonard" owned ship "Beagle".
- * The location should be 13.
- * The destination location should be 0.
- * The destination sail should be active.
+ <!-- SNAPSHOT status=200 -->  
+ * Go to the "sheldon" "ship" "Beagle".
+ * The _destination sail_ state should be _active_.
+ * The _destination location_ number should be 0.
+ * The _location_ number should be 4.
+ * It should not be docked.
+ * Halt sailing.
+ <!-- SNAPSHOT status=200 -->  
+ * The _destination sail_ state should be _inactive_.
 
-# Arrivign home.
-
-The ship is not at home yet.
-
- * Go back to the previous screen.
- * You should be at the game screen.  
- * Click on the "leonard" city "Capital"
- * There should be 0 "leonard" ship.
-
-Wait few turns until arrive.
-
- * Skip 12 rounds.
- <!-- SNAPSHOT status=200 -->
- * Click on the "leonard" owned ship "Beagle".
- * The location should be 1.
- * Go back to the previous screen.
- * You should be at the game screen.
- * Click on the "leonard" city "Capital"
-
-And still no arrived home.
-
- * There should be 0 "leonard" ship.
-
-Yet, One more round to go.
-
-### Arriving home
-
-And...
-
- * End the round.
- <!-- SNAPSHOT status=200 -->
- * Click on the "leonard" owned ship "Beagle".
- * The location should be 0.
- * The destination sail should be inactive.
- * It should be docked at the "leonard" city "Capital".
- * Click on see the dock.
- * There should be 1 "leonard" ship.
