cleaning unused steps

--- a/src/main/resources/blog/2021-08-14_cities.md
+++ b/src/main/resources/blog/2021-08-14_cities.md
@@ -46,7 +46,7 @@ You can see your city details.
 And players can change the name of cities.
 
  * Enter new name "Leoland".
- * Click the change name button.
+ * Ask to change the name.
  <!-- SNAPSHOT status=200 -->
  * You should be at the screen of a "city".
  * The _name_ content should be "Leoland".
