--- a/src/main/resources/blog/2021-08-18_sailing.md
+++ b/src/main/resources/blog/2021-08-18_sailing.md
@@ -17,7 +17,7 @@ Cities are created at locations, 0, 5, 10, ... as players join.
 One separated by 5 to the next one.
 
  * Given that "leonard" is playing.
- * And that "penny" is playing.
+ * Given that "penny" is playing.
  * Go to the next player "sheldon"
  <!-- SNAPSHOT status=200 -->
  * Go to the "leonard" "city" "Capital".
