Preparing for the exam

--- a/src/main/resources/blog/2021-11-28_decks.md
+++ b/src/main/resources/blog/2021-11-28_decks.md
@@ -50,14 +50,22 @@ And now we can load until reach the new capacity.
  * The resource "gold" count should be 5.
  * The dock resource "gold" count should be 1.
 
-### Upgrade the Gold store
+## Upgrade the Gold store
 
 You can upgrade the gold store by spending 5 more of steel. 
 With the upgrade it will be able to hold 5 more of gold.
 
- * Given that the "leonard" "city" "Capital" has resource "steel" count 6.
- * Given that the "leonard" "city" "Capital" has resource "gold" count 11.
- * Given that the "leonard" "ship" "Beagle" has resource "gold" count 1.
+First we make sure that we have everything that we need:
+
+ * Given that "leonard" is playing.
+ * Given that the "leonard" "ship" "Beagle" has built a "Gold store"
+ * Given that the "leonard" "city" "Capital" has resource "steel" count 5.
+ * Go to the next player "leonard"
+ <!-- SNAPSHOT status=200 -->
+ * Go to the "leonard" "ship" "Beagle".
+
+Then we make the upgrade:
+
  * The resource "gold" maximum should be 5.
  * Go to the contained "deck" "Gold store".
  * The _level_ number should be 1.
@@ -68,22 +76,32 @@ With the upgrade it will be able to hold 5 more of gold.
  * The resource modifier for "gold" maximum should be 10.
  * Go back to the previous screen.
  * The resource "gold" maximum should be 10.
- * The dock resource "steel" count should be 1.
+ * The dock resource "steel" count should be 0.
 
 And now we can load until reach the new capacity.
 
- * The resource "gold" count should be 1.
+ * Given that the "leonard" "city" "Capital" has resource "gold" count 11.
+ * Given that the "leonard" "ship" "Beagle" has resource "gold" count 1.
  * Load 999 of "gold".
  <!-- SNAPSHOT status=200 -->  
  * The resource "gold" count should be 10.
  * The dock resource "gold" count should be 2.
 
-### Wood store
+## Wood store
 
 There is also the possibility for ships to carry wood.
 With a cost of 5 wood, it will be able to carry up to 5 wood.
 
- * Given that the "leonard" "city" "Capital" has resource "wood" count 15.
+First we make sure that we have everything that we need:
+
+ * Given that "leonard" is playing.
+ * Given that the "leonard" "city" "Capital" has resource "wood" count 5.
+ * Go to the next player "leonard"
+ <!-- SNAPSHOT status=200 -->
+ * Go to the "leonard" "ship" "Beagle".
+
+Then we make the upgrade:
+
  * The resource "wood" maximum should be 0.
  * Go to the contained "deck" "Builder".
  * Build the "Wood store".
@@ -91,15 +109,16 @@ With a cost of 5 wood, it will be able to carry up to 5 wood.
  * You should be at the screen of a "ship".
  * There should contain the "deck" "Wood store".
  * The resource "wood" maximum should be 5.
- * The dock resource "wood" count should be 10.
+ * The dock resource "wood" count should be 0.
 
 And now we can load until reach the new capacity.
 
+ * Given that the "leonard" "city" "Capital" has resource "wood" count 6.
  * The resource "wood" count should be 0.
  * Load 999 of "wood".
  <!-- SNAPSHOT status=200 -->  
  * The resource "wood" count should be 5.
- * The dock resource "wood" count should be 5.
+ * The dock resource "wood" count should be 1.
 
 ### Banana store
 
